# Player

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  Trunk.toml  check_build.sh  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
assets/linux/: wrldbldr.desktop
assets/macos/: Info.plist
assets/windows/: url-scheme.reg
docs/: DEEP_LINKING.md
src/: main.rs  routes.rs
src/application/: mod.rs
src/application/dto/: mod.rs  session_dto.rs  settings.rs  websocket_messages.rs  world_snapshot.rs
src/application/ports/: mod.rs
src/application/services/: action_service.rs  asset_service.rs  challenge_service.rs  character_service.rs  event_chain_service.rs  generation_service.rs  location_service.rs  mod.rs  narrative_event_service.rs  observation_service.rs  player_character_service.rs  session_command_service.rs  session_service.rs  settings_service.rs  skill_service.rs  story_event_service.rs  suggestion_service.rs  workflow_service.rs  world_service.rs
src/domain/: mod.rs
src/domain/entities/: approval.rs  character.rs  dialogue.rs  interaction.rs  location.rs  mod.rs  player_action.rs  scene.rs  world.rs
src/domain/value_objects/: ids.rs  mod.rs
src/infrastructure/: api.rs  connection_factory.rs  http_client.rs  mod.rs  storage.rs  url_handler.rs
src/infrastructure/asset_loader/: mod.rs  world_snapshot.rs
src/infrastructure/audio/: mod.rs
src/infrastructure/platform/: desktop.rs  mock.rs  mod.rs  wasm.rs
src/infrastructure/testing/: fixtures.rs  mock_api_port.rs  mock_game_connection_port.rs  mod.rs
src/infrastructure/websocket/: client.rs  game_connection_adapter.rs  messages.rs  mod.rs
src/presentation/: mod.rs  services.rs
src/presentation/components/: action_panel.rs  character_sheet_viewer.rs  event_overlays.rs  inventory_panel.rs  known_npcs_panel.rs  mini_map.rs  (+2 more)
src/routes/: connection.rs  dm_routes.rs  main_menu.rs  mod.rs  pc_creation.rs  player_routes.rs  world_select.rs  world_session_layout.rs
styles/: input.css
(+93 files in other folders)
