[package]
name = "wrldbldr-player"
version = "0.1.0"
edition = "2021"
description = "WrldBldr Player - TTRPG gameplay client with PC and DM views"
license = "MIT"
authors = ["Otto"]

[dependencies]
# Dioxus UI framework - features controlled by build target
dioxus = "0.7.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unique identifiers
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# WebSocket client
futures-util = "0.3"
url = "2.5"

# Logging
tracing = "0.1"

# Configuration (desktop only)
dotenvy = "0.15"

# Desktop-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7.2", features = ["desktop", "router"] }
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

# Web/WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.2", features = ["web", "router"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "console",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
gloo-timers = "0.3"
gloo-net = "0.5"

[features]
default = []

[[bin]]
name = "wrldbldr-player"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "z"

[profile.dev.package."*"]
opt-level = 2

# WASM-specific optimizations
[profile.release.package.wrldbldr-player]
opt-level = "z"
